--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,10 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('css/stylesheet.css') }}">
+
             {{ encore_entry_link_tags('app') }}
+
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +17,32 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <!-- menu nav bar-->
+    <div>
+        <nav >
+            <ul id="navbar">
+                <li class="navbar" id="principal"><i class="fas fa-home"><a href="{{ path('app_homepage') }}">Accueil</a></i>
+                {% if is_granted("ROLE_USER") %}
+                    <li class="navbar">Bienvenue {{ app.user.nom }}</li>
+                <li class="navbar" id="panier"><i class="fas fa-shopping-cart"></i> Voir le panier </li>
+               {% else %}
+                <li class="navbar" ><a href="{{ path('app_register') }}" > S'enregistrer</a>
+                <li class="navbar" id="btnConnexion"><a href="{{ path('app_login') }}" id="clickConnecter"> Se Connecter</a>
+                {% endif %}
+            </ul>
+        </nav>
+
+
+
+    </div>
+    <main>
+
+
+        {% block body %}
+
+
+        {% endblock %}
+    </main>
+    </div>
     </body>
 </html>
